# prototype-jpeg

./: .gitignore  .gitlab-ci.yml  README.md  example.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
prototype_jpeg/: __init__.py  codec.py  utils.py
refs/: dct1.c  dct2.c
tests/: test_integration.py  test_prototype_jpeg.py  test_unit.py
tests/images/rgb/: 10x20.raw  11x20.raw  Baboon.raw
tests/tests_unit/: test_codec.py  test_example.py  test_main.py  test_prototype_jpeg.py  test_utils.py
