[tool.poetry]
name = "prototype-jpeg"
version = "0.1.0"
description = ""
authors = ["Sean Wu <seanwu1105@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.1"
scipy = "^1.5.2"
matplotlib = "^3.3.1"
bitarray = "^1.5.2"
bidict = "^0.20.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.5.3"
mypy = "^0.782"
autopep8 = "^1.5.4"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
