[tool.poetry]
name = "prototype-jpeg"
version = "0.1.0"
description = ""
authors = ["Sean Wu <seanwu1105@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.2"
scipy = "^1.5.2"
matplotlib = "^3.3.2"
bitarray = "^1.5.3"
bidict = "^0.21.2"

[tool.poetry.dev-dependencies]
pytest = "^6.1"
pylint = "^2.7.0"
mypy = "^0.790"
autopep8 = "^1.5.4"
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
